GLA mobile fixes

--- a/gla.html
+++ b/gla.html
@@ -102,7 +102,7 @@
     </p>
   </section>
   <section class="py-20 text-gray-300">
-  <div class="container mx-auto px-6">
+  <div class="container mx-auto">
     <!-- Title -->
     <h2 class="text-3xl font-semibold text-primary mb-12">Impact Metrics</h2>
 
@@ -185,7 +185,7 @@
   </div>
 </section>
 
-<section class="container mx-auto px-6 py-16 text-gray-300">
+<section class="container mx-auto py-16 text-gray-300">
   <!-- Section Title -->
   <div class="mb-10">
     <h2 class="text-3xl font-semibold text-white mb-3">User Research: Understanding Our Learners</h2>
@@ -198,7 +198,7 @@
   <!-- Two Outlined Cards -->
   <div class="grid md:grid-cols-2 gap-8">
     <!-- Card 1: Who We’re Designing For -->
-    <div class="border border-gray-700 rounded-2xl p-8 hover:border-primary transition-colors">
+    <div class="border border-gray-700 rounded-2xl p-4 hover:border-primary transition-colors">
       <h3 class="text-xl font-semibold text-white mb-4">Who We’re Designing For</h3>
       <p class="text-gray-400 mb-6">
         Our research spanned 1.6M+ learners across India. Here’s what we discovered about their backgrounds and motivations:
@@ -212,7 +212,7 @@
     </div>
 
     <!-- Card 2: Key Behavior Patterns -->
-    <div class="border border-gray-700 rounded-2xl p-8 hover:border-primary transition-colors">
+    <div class="border border-gray-700 rounded-2xl p-4 hover:border-primary transition-colors">
       <h3 class="text-xl font-semibold text-white mb-4">Key Behavior Patterns</h3>
       <p class="text-gray-400 mb-6">
         Our learners aren’t passive consumers. They’re strategic, self-driven individuals seeking growth through flexibility and focus.
@@ -227,7 +227,7 @@
   </div>
 </section>
 
-<section class="container mx-auto px-6 py-16 text-gray-300">
+<section class="container mx-auto py-16 text-gray-300">
   <!-- Section Title -->
   <div class="mb-10">
     <h2 class="text-3xl font-semibold text-white mb-3">What the Data Told Us</h2>
@@ -240,7 +240,7 @@
   <div class="grid md:grid-cols-2 gap-8">
     
     <!-- Card 1: Registration Source -->
-    <div class="border border-gray-700 rounded-2xl p-8 hover:border-primary transition-colors">
+    <div class="border border-gray-700 rounded-2xl p-4 hover:border-primary transition-colors">
       <img src="img/gla/g-1.png" alt="Registration Source" class="w-full rounded-lg mb-4">
       <h3 class="text-xl font-semibold text-white mb-2">Registration Source</h3>
       <p class="text-gray-400">
@@ -251,7 +251,7 @@
     </div>
 
     <!-- Card 2: Device Usage -->
-    <div class="border border-gray-700 rounded-2xl p-8 hover:border-primary transition-colors">
+    <div class="border border-gray-700 rounded-2xl p-4 hover:border-primary transition-colors">
       <img src="img/gla/g-2.png" alt="Device Usage" class="w-full rounded-lg mb-4">
       <h3 class="text-xl font-semibold text-white mb-2">Device Usage</h3>
       <p class="text-gray-400">
@@ -262,7 +262,7 @@
     </div>
 
     <!-- Card 3: Age Distribution -->
-    <div class="border border-gray-700 rounded-2xl p-8 hover:border-primary transition-colors">
+    <div class="border border-gray-700 rounded-2xl p-4 hover:border-primary transition-colors">
       <img src="img/gla/g-3.png" alt="Age Distribution" class="w-full rounded-lg mb-4">
       <h3 class="text-xl font-semibold text-white mb-2">Age Distribution</h3>
       <p class="text-gray-400">
@@ -273,7 +273,7 @@
     </div>
 
     <!-- Card 4: Educational Background -->
-    <div class="border border-gray-700 rounded-2xl p-8 hover:border-primary transition-colors">
+    <div class="border border-gray-700 rounded-2xl p-4 hover:border-primary transition-colors">
       <img src="img/gla/g-4.png" alt="Educational Background" class="w-full rounded-lg mb-4">
       <h3 class="text-xl font-semibold text-white mb-2">Educational Background</h3>
       <p class="text-gray-400">
@@ -287,7 +287,7 @@
 
   </div>
 </section>
-<section class="container mx-auto px-6 py-16 text-gray-300">
+<section class="container mx-auto py-16 text-gray-300">
   <!-- Section: Bridge to Pro -->
   <div class="max-w-4xl mb-14">
     <h2 class="text-3xl font-semibold text-white mb-4">Bridging Learning to Career Transitions</h2>
@@ -299,7 +299,7 @@
   </div>
 
   <!-- Section: The Pro Opportunity -->
-  <div class="border border-gray-700 rounded-2xl p-10 mb-16 hover:border-primary transition-colors">
+  <div class="border border-gray-700 rounded-2xl p-4 mb-16 hover:border-primary transition-colors">
     <h3 class="text-2xl font-semibold text-white mb-4">The Pro Opportunity</h3>
     <p class="text-gray-400 mb-4">
       Deeper analysis revealed a powerful insight about mid-level professionals aged 25–35 — 
@@ -371,7 +371,7 @@
   </div>
 </section>
 
-<section class="container mx-auto px-6 py-16 text-gray-300 space-y-16">
+<section class="container mx-auto py-16 text-gray-300 space-y-16">
 
   <!-- 1. Intro Narrative Block -->
   <div class="mx-auto">
@@ -384,7 +384,7 @@
   </div>
 
   <!-- 2. Core Design Foundations (three-column feature grid with icons) -->
-  <div class="bg-gray-800/40 border border-gray-700 rounded-2xl p-10">
+  <div class="bg-gray-800/40 border border-gray-700 rounded-2xl p-4">
     <h3 class="text-2xl font-semibold text-white mb-6 text-center">Core Design Foundations</h3>
     <div class="grid md:grid-cols-3 gap-10">
       
@@ -518,7 +518,7 @@
 
 </section>
 
-<section class="container mx-auto px-6 py-20 text-gray-300">
+<section class="container mx-auto py-20 text-gray-300">
   <div class="mb-12">
     <h2 class="font-semibold text-white mb-3 text-3xl">The Learning Ecosystem</h2>
     <p class="text-gray-400">
@@ -585,7 +585,7 @@
   </div>
 </section>
 
-<section class="container mx-auto px-6 py-20 text-gray-300 space-y-24">
+<section class="container mx-auto py-20 text-gray-300 space-y-24">
 
   <!-- Section Intro -->
   <div class="mx-autor">
@@ -654,7 +654,7 @@
 
 </section>
 
-<section class="container mx-auto px-6 py-20 text-gray-300">
+<section class="container mx-auto py-20 text-gray-300">
   <!-- Title + Intro -->
   <div class="mb-12">
     <h2 class="text-3xl font-semibold text-white mb-3">High-Fidelity Designs</h2>
@@ -697,7 +697,7 @@
   </div>
 </section>
 
-<section class="container mx-auto px-6 py-20 text-gray-300">
+<section class="container mx-auto py-20 text-gray-300">
   <!-- Intro -->
   <div class="max-w-4xl mb-12">
     <h2 class="text-3xl font-semibold text-white mb-4">Impact & Reflection</h2>
