--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <!-- ===== LEFT SIDEBAR ===== -->
         <header class="sidebar">
             <div>
+                <img class="sidebar__profile-pic" src="img/sivaramireddy.jpeg" alt="B. Sivarami Reddy" />
                 <h1 class="sidebar__name"><a href="/">B. Sivarami Reddy</a></h1>
                 <h2 class="sidebar__title">Principal Designer &amp; UX Design Manager</h2>
                 <p class="sidebar__tagline">I design meaningful, user-focused digital experiences guided by the belief
