added new proj and others

--- a/Jedi.html
+++ b/Jedi.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jedi Dashboard — Scaling Operational Efficiency through UX Strategy</title>
+    <title>Jedi Dashboard: Scaling Operational Efficiency through UX Strategy</title>
     <meta name="description"
         content="A case study on how the Jedi Dashboard project transformed delivery operations. By automating workflows, centralizing learner context, and enhancing PM visibility, we achieved a 50% increase in Program Manager capacity, enabling teams to scale from 120 to 200 learners per PM." />
     <meta name="keywords"
@@ -22,7 +22,7 @@
 
     <!-- Open Graph / Social Meta -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Jedi Dashboard — Scaling Ops Efficiency through UX Strategy" />
+    <meta property="og:title" content="Jedi Dashboard: Scaling Ops Efficiency through UX Strategy" />
     <meta property="og:description"
         content="How UX strategy achieved a 50% increase in Program Manager capacity, scaling from 120 to 200 learners per PM." />
     <meta property="og:image" content="https://uxsiva.onrender.com/og-image.jpg" />
@@ -31,7 +31,7 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Jedi Dashboard — Scaling Ops Efficiency through UX Strategy" />
+    <meta name="twitter:title" content="Jedi Dashboard: Scaling Ops Efficiency through UX Strategy" />
     <meta name="twitter:description"
         content="How UX strategy achieved a 50% increase in Program Manager capacity, scaling from 120 to 200 learners per PM." />
     <meta name="twitter:image" content="https://uxsiva.onrender.com/og-image.jpg" />
@@ -104,7 +104,7 @@
             <h2 class="cs-section__title">High-Impact Achievements <span class="cs-section__title--accent">Redefining
                     Operational Scale</span></h2>
             <ul class="cs-list">
-                <li><strong>80% increase</strong> in learner handling capacity per PM — from 100–120 to 200 learners per
+                <li><strong>80% increase</strong> in learner handling capacity per PM, from 100–120 to 200 learners per
                     PM.</li>
                 <li>Reduced ticket resolution time and improved planning & communication visibility.</li>
                 <li>Achieved <strong>full auditability</strong> by logging emails, calls, and WhatsApp interactions.
@@ -377,7 +377,7 @@
             <p class="cs-section__text">
                 Before the release, we conducted a comprehensive usability test and gathered feedback from stakeholders.
                 While the findings were satisfactory, I identified several areas for improvement.
-                One of these areas was the heavy font sizes in the data tables, which stemmed from user preferences —
+                One of these areas was the heavy font sizes in the data tables, which stemmed from user preferences.
                 PMs wanted to view more data within a single view. Additional usability refinements were also identified
                 to
                 improve overall efficiency and data readability.
