--- a/cvreview.html
+++ b/cvreview.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI-Powered CV Review — Transforming Resume Evaluation - B Sivarami Reddy</title>
+  <title>AI-Powered CV Review: Transforming Resume Evaluation - B Sivarami Reddy</title>
   <meta name="description"
     content="How Great Learning's AI-powered CV Review system reduced evaluation costs, eliminated inconsistency, and enabled real-time personalized feedback for thousands of learners." />
   <meta name="keywords"
@@ -22,7 +22,7 @@
 
   <!-- Open Graph / Social Meta -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="AI-Powered CV Review — Transforming Resume Evaluation" />
+  <meta property="og:title" content="AI-Powered CV Review: Transforming Resume Evaluation" />
   <meta property="og:description"
     content="How AI reduced resume evaluation costs and enabled real-time personalized feedback for thousands of learners." />
   <meta property="og:image" content="https://uxsiva.onrender.com/og-image.jpg" />
@@ -31,7 +31,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="AI-Powered CV Review — Transforming Resume Evaluation" />
+  <meta name="twitter:title" content="AI-Powered CV Review: Transforming Resume Evaluation" />
   <meta name="twitter:description"
     content="How AI reduced resume evaluation costs and enabled real-time personalized feedback for thousands of learners." />
   <meta name="twitter:image" content="https://uxsiva.onrender.com/og-image.jpg" />
@@ -81,7 +81,7 @@
         Eliminating Cost, Inconsistency, and Delay in Career Services
       </p>
       <p class="cs-section__text">
-        Designing an AI-powered solution to replace an expensive, inconsistent manual mentor process —
+        Designing an AI-powered solution to replace an expensive, inconsistent manual mentor process.
         delivering scalable, personalized, and high-quality career support.
       </p>
     </section>
@@ -91,7 +91,7 @@
       <h2 class="cs-section__title">Project Overview: <span class="cs-section__title--accent">Solving a Financial and
           Quality Crisis</span></h2>
       <p class="cs-section__text">
-        Great Learning's manual resume review process—anchored by external mentors—had become a major operational
+        Great Learning's manual resume review process, anchored by external mentors—had become a major operational
         bottleneck.
       </p>
       <ul class="cs-list">
@@ -127,7 +127,7 @@
         <div class="cs-card">
           <h3 class="cs-card__title">Scalability & Speed</h3>
           <p class="cs-card__text">48-hour manual reviews restricted throughput.</p>
-          <p class="cs-card__text" style="color:var(--slate);margin-top:0.5rem;">→ 10-minute automated reviews —
+          <p class="cs-card__text" style="color:var(--slate);margin-top:0.5rem;">→ 10-minute automated reviews.
             instantly scalable.</p>
         </div>
       </div>
@@ -167,7 +167,7 @@
         <p class="cs-card__text">
           <strong>Impact Summary:</strong> Over <strong>5,673 learners</strong> created resumes and
           <strong>2,802 AI enhancements</strong> were applied.
-          A <strong>72.4% acceptance rate</strong> validated strong learner trust and consistency—establishing
+          A <strong>72.4% acceptance rate</strong> validated strong learner trust and consistency, establishing
           the system as a scalable, high-quality replacement for manual mentor reviews.
         </p>
       </div>
@@ -233,7 +233,7 @@
       </h2>
       <p class="cs-section__text">
         This AI-powered CV Review feature replaced the manual mentor-based review system,
-        which had become time-consuming, inconsistent, and financially unsustainable—costing nearly
+        which had become time-consuming, inconsistent, and financially unsustainable, costing nearly
         <strong>₹10 Crores annually</strong>.
         The human-led process suffered from subjective feedback, frequent moderation needs, and generic,
         non-personalized comments like "revise this section" or "add this part."
@@ -369,8 +369,8 @@
       <h2 class="cs-section__title">Conclusion</h2>
       <p class="cs-section__text">
         This AI-powered initiative replaced a financially unsustainable manual process with a consistent, scalable, and
-        personalized resume review experience—saving <strong>$1.2 million annually</strong> and reducing QA time by
-        <strong>70%</strong>. Learners now receive contextual, actionable, and immediate feedback—empowering confident
+        personalized resume review experience, saving <strong>$1.2 million annually</strong> and reducing QA time by
+        <strong>70%</strong>. Learners now receive contextual, actionable, and immediate feedback, empowering confident
         applications and career growth.
       </p>
     </section>
