--- a/shine.html
+++ b/shine.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GL Shine — Harmonizing Sales Compliance & Autonomy - B Sivarami Reddy</title>
+  <title>GL Shine: Harmonizing Sales Compliance & Autonomy - B Sivarami Reddy</title>
   <meta name="description"
     content="See how Lead UX Designer B Sivarami Reddy used research to align sales goals with SOP compliance, boosting LC productivity by 80% and eliminating legacy tool friction." />
   <meta name="keywords"
@@ -22,7 +22,7 @@
 
   <!-- Open Graph / Social Meta -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="GL Shine — Harmonizing Sales Compliance & Autonomy" />
+  <meta property="og:title" content="GL Shine: Harmonizing Sales Compliance & Autonomy" />
   <meta property="og:description"
     content="UX case study on aligning sales goals with SOP compliance, boosting LC productivity by 80%." />
   <meta property="og:image" content="https://uxsiva.onrender.com/og-image.jpg" />
@@ -31,7 +31,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="GL Shine — Harmonizing Sales Compliance & Autonomy" />
+  <meta name="twitter:title" content="GL Shine: Harmonizing Sales Compliance & Autonomy" />
   <meta name="twitter:description"
     content="UX case study on aligning sales goals with SOP compliance, boosting LC productivity by 80%." />
   <meta name="twitter:image" content="https://uxsiva.onrender.com/og-image.jpg" />
@@ -88,7 +88,7 @@
         Procedure (SOP) compliance, exacerbated by inefficient legacy tools.
       </p>
       <p class="cs-section__text">
-        Our mandate was to design and launch a sophisticated, unified platform—<strong>GL Shine v3</strong>—that would
+        Our mandate was to design and launch a sophisticated, unified platform, <strong>GL Shine v3</strong>, that would
         fundamentally empower our sales force, align compliance with performance, and deliver measurable business value.
       </p>
 
@@ -117,7 +117,7 @@
       <h2 class="cs-section__title">My Leadership & <span class="cs-section__title--accent">Strategic Role</span></h2>
       <p class="cs-section__text">
         As the <strong>Lead UX Designer</strong>, my role was to diagnose the root cause of systemic
-        failure—specifically, why two previous attempts had failed.
+        failure, specifically, why two previous attempts had failed.
         My primary objective was to halt the cycle of ineffective solutions by deeply understanding user behavior and
         procedural gaps, establishing a robust, user-centered UX strategy that bridged the divide between sales
         autonomy and organizational compliance.
@@ -181,7 +181,7 @@
       </div>
 
       <p class="cs-section__text" style="margin-top:1.5rem;">
-        These insights became the foundation of our new UX direction — a system that
+        These insights became the foundation of our new UX direction: a system that
         aligns <strong>SOP compliance</strong> with <strong>enrollment goals</strong>,
         enhances <strong>lead management efficiency</strong>, and
         ultimately drives <strong>higher sales performance</strong> and user satisfaction.
@@ -193,7 +193,7 @@
       <h2 class="cs-section__title">Design Strategy: <span class="cs-section__title--accent">Empowering the Sales
           Force</span></h2>
       <p class="cs-section__text">
-        The strategy was executed via two targeted UX decisions — addressing the user's viewing environment and workflow
+        The strategy was executed via two targeted UX decisions: addressing the user's viewing environment and workflow
         friction.
       </p>
       <div class="cs-grid cs-grid--2">
@@ -239,7 +239,7 @@
         <div class="cs-card">
           <h3 class="cs-card__title" style="color:var(--green);">Target Audience</h3>
           <p class="cs-card__text">
-            Learning Consultants (LCs), Managers, Sales Leaders, and Business Unit (BU) Heads — each with distinct goals
+            Learning Consultants (LCs), Managers, Sales Leaders, and Business Unit (BU) Heads, each with distinct goals
             and challenges. The platform was designed to support all these roles within the sales ecosystem.
           </p>
         </div>
@@ -276,7 +276,7 @@
         </div>
 
         <p class="cs-card__text">
-          The existing tool, <strong>LeadSquared</strong>, posed major UX challenges — opening multiple tabs (up to 30
+          The existing tool, <strong>LeadSquared</strong>, posed major UX challenges, opening multiple tabs (up to 30
           at times) during lead interactions. This created cognitive overload and fragmented workflows.
         </p>
         <p class="cs-card__text">
