--- a/olympus.html
+++ b/olympus.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Olympus — Crafting the Olympus LMS Experience - B Sivarami Reddy</title>
+  <title>Olympus: Crafting the Olympus LMS Experience - B Sivarami Reddy</title>
   <meta name="description"
     content="Discover how the Olympus LMS redesign turned research insights into a seamless digital learning experience, empowering 45,000+ learners through thoughtful UX design and innovation." />
   <meta name="keywords"
@@ -22,7 +22,7 @@
 
   <!-- Open Graph / Social Meta -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Olympus — Crafting the LMS Experience for 45,000+ Learners" />
+  <meta property="og:title" content="Olympus: Crafting the LMS Experience for 45,000+ Learners" />
   <meta property="og:description"
     content="UX case study on redesigning a learning management system to empower 45,000+ learners." />
   <meta property="og:image" content="https://uxsiva.onrender.com/og-image.jpg" />
@@ -31,7 +31,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Olympus — Crafting the LMS Experience for 45,000+ Learners" />
+  <meta name="twitter:title" content="Olympus: Crafting the LMS Experience for 45,000+ Learners" />
   <meta name="twitter:description"
     content="UX case study on redesigning a learning management system to empower 45,000+ learners." />
   <meta name="twitter:image" content="https://uxsiva.onrender.com/og-image.jpg" />
@@ -87,7 +87,7 @@
       <p class="cs-section__text">
         The digital economy demands professionals who are not just skilled, but <strong>future-ready</strong>. At
         Olympus, our mission is to deliver nothing less than career success for our diverse learners. Recognizing the
-        need to elevate our learning platform, we embarked on a complete redesign of the <strong>Olympus LMS</strong> —
+        need to elevate our learning platform, we embarked on a complete redesign of the <strong>Olympus LMS</strong>.
         an initiative rooted in a bold vision: to multiply learner success rates fivefold.
       </p>
       <p class="cs-section__text">
@@ -95,7 +95,7 @@
         learning environment.
       </p>
       <p class="cs-section__text">
-        The LMS was redesigned to serve a diverse cohort of <strong>Post-Graduate (PG) learners</strong> — both
+        The LMS was redesigned to serve a diverse cohort of <strong>Post-Graduate (PG) learners</strong>, both
         programmers and non-programmers with <strong>0–25 years</strong> of work experience. The goal was to evolve from
         a functional platform into a structured, intuitive, and highly responsive digital campus that delivers an
         authentically personalized and efficient learning journey.
@@ -201,7 +201,7 @@
         <h3 class="cs-card__title">User Journey of Learners</h3>
         <p class="cs-card__text">
           Mapping the learner journey helped us pinpoint crucial pain points and opportunities within the existing LMS.
-          These insights became the foundation for the redesign—ensuring the platform adapts to the learner,
+          These insights became the foundation for the redesign, ensuring the platform adapts to the learner,
           not the other way around.
         </p>
         <img src="img/olympus/9.jpg" alt="User journey mapping"
@@ -217,7 +217,7 @@
       <p class="cs-section__text">
         Mapping the learner journey exposed critical areas of friction that fragmented the experience.
         Resolving these pain points became the cornerstone of our redesign, ensuring the platform adapts
-        to the user—not the other way around.
+        to the user, not the other way around.
       </p>
 
       <div class="cs-timeline">
@@ -289,7 +289,7 @@
           <h3 class="cs-card__title">9. Overall Learning Journey Complexity</h3>
           <p class="cs-card__text">
             The overall learning journey felt cumbersome due to compounded issues across visibility, navigation,
-            submissions, and interactivity—resulting in a fragmented experience. A more
+            submissions, and interactivity, resulting in a fragmented experience. A more
             <strong>structured and intuitive learning environment</strong> was essential to restore clarity and
             engagement.
           </p>
@@ -302,8 +302,8 @@
       <h2 class="cs-section__title">Design Excellence & <span class="cs-section__title--accent">Implementation</span>
       </h2>
       <p class="cs-section__text">
-        A dedicated <strong>cross-functional team</strong>—comprising designers, developers, and a product
-        manager—executed the transformation. Through rapid wireframing, prototyping, and iterative feedback, we ensured
+        A dedicated <strong>cross-functional team</strong>, comprising designers, developers, and a product
+        manager, executed the transformation. Through rapid wireframing, prototyping, and iterative feedback, we ensured
         every design decision aligned with user needs and strategic business goals.
       </p>
       <p class="cs-section__text">
@@ -346,7 +346,7 @@
       <h2 class="cs-section__title cs-section__title--accent">Final Designs</h2>
       <p class="cs-section__text">
         The high-fidelity designs bring together refined typography, improved navigation, and optimized information
-        hierarchy—creating a seamless and engaging learner experience. Each element was designed to enhance usability
+        hierarchy, creating a seamless and engaging learner experience. Each element was designed to enhance usability
         while aligning with Olympus' visual identity and accessibility goals.
       </p>
       <div style="display:flex;flex-direction:column;gap:1.5rem;">
@@ -377,11 +377,11 @@
       <p class="cs-section__text">
         The new Olympus LMS was released in <strong>phased batches</strong>, achieving immediate adoption and high
         satisfaction. This validated a core design truth:
-        The Olympus LMS stands today as a learner-first platform — a testament to design that listens, evolves, and
+        The Olympus LMS stands today as a learner-first platform: a testament to design that listens, evolves, and
         empowers lifelong learning.
       </p>
       <blockquote class="cs-blockquote">
-        "Real impact begins when we stop expecting users to adapt to our product—and instead, reshape the product to
+        "Real impact begins when we stop expecting users to adapt to our product, and instead, reshape the product to
         adapt to their goals, behaviors, and challenges."
       </blockquote>
     </section>
